Link para acesso a listagem de usuários

--- a/angular-app/src/app/components/pages/category/category-list/category-list.component.html
+++ b/angular-app/src/app/components/pages/category/category-list/category-list.component.html
@@ -11,6 +11,10 @@
                     <a [routerLink]="'/products/list'" class="btn btn-success">
                         Produtos
                     </a>
+                    &nbsp;
+                    <a [routerLink]="'/users/list'" class="btn btn-info">
+                        Usuários
+                    </a>
                 </td>
             </tr>
             <tr>
