--- a/angular-app/src/app/components/pages/login/login.component.html
+++ b/angular-app/src/app/components/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<form class="form-signin" (submit)="submit()">
+<form class="form-signin" (submit)="submit($event)">
   <h1 class="h3 mb-3 font-weight-normal">
       Code Shopping - Login
   </h1>
