--- a/angular-app/src/app/components/bootstrap/navbar/navbar.component.html
+++ b/angular-app/src/app/components/bootstrap/navbar/navbar.component.html
@@ -1,32 +1,33 @@
-<nav class="navbar navbar-expand navbar-dark bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <a class="navbar-brand" href="#">
     {{appTitle}}
   </a>
-  <button class="navbar-toggler" type="button" 
-    data-toggle="collapse" 
-    data-target="#navbarsExample" 
-    aria-controls="navbarsExample02" 
-    aria-expanded="false" 
-    aria-label="Toggle navigation">
+  <button class="navbar-toggler" 
+      type="button" 
+      data-toggle="collapse" 
+      data-target="#navbars" 
+      aria-controls="navbars" 
+      aria-expanded="false" 
+      aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarsExample">
+  <div class="collapse navbar-collapse" id="navbars">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" [routerLink]="'/categories/list'">
-          Categorias
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" [routerLink]="'/products/list'">
-          Produtos
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" [routerLink]="'/users/list'">
-          Usuários
-        </a>
-      </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="'/categories/list'">
+            Categorias
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="'/products/list'">
+            Produtos
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="'/users/list'">
+            Usuários
+          </a>
+        </li>
     </ul>
     <ul class="navbar-nav">
         <li class="nav-item dropdown">
