Verificando se usuário está autenticado no Angular

--- a/angular-app/src/app/app.component.html
+++ b/angular-app/src/app/app.component.html
@@ -1,4 +1,4 @@
-<navbar [app-title]="title"></navbar>
+<navbar [app-title]="title" *ngIf="canShowNavbar()"></navbar>
 <br>
 <main>
     <div class="container">
