--- a/angular-app/src/app/components/bootstrap/navbar/navbar.component.html
+++ b/angular-app/src/app/components/bootstrap/navbar/navbar.component.html
@@ -13,17 +13,17 @@
   </button>
   <div class="collapse navbar-collapse" id="navbars">
     <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
+        <li class="nav-item" [routerLinkActive]="'active'">
           <a class="nav-link" [routerLink]="'/categories/list'">
             Categorias
           </a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" [routerLinkActive]="'active'">
           <a class="nav-link" [routerLink]="'/products/list'">
             Produtos
           </a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" [routerLinkActive]="'active'">
           <a class="nav-link" [routerLink]="'/users/list'">
             Usuários
           </a>
