--- a/angular-app/src/app/components/common/sort-column/sort-column.component.html
+++ b/angular-app/src/app/components/common/sort-column/sort-column.component.html
@@ -1,5 +1,4 @@
-<a href="javascript:void(0)" (click)="changeIcon()">
+<a href="javascript:void(0)">
   <ng-content></ng-content>&nbsp;
-  <i class="fas fa-caret-down" *ngIf="iconDown"></i>
-  <i class="fas fa-caret-up" *ngIf="!iconDown"></i>
+  <i class="fas" [ngClass]="{'fa-caret-down': showArrowDown(), 'fa-caret-up': showArrowUp()}"></i>
 </a>
