Componente genérico de busca, para evitar repetição de código e criação desnecessária de componentes

--- a/angular-app/src/app/components/pages/category/category-list/category-list.component.html
+++ b/angular-app/src/app/components/pages/category/category-list/category-list.component.html
@@ -9,7 +9,7 @@
                     </button>
                 </td>
                 <td colspan="2">
-                    <category-search-form (onSearch)="search($event)"></category-search-form>
+                    <search-form (onSearch)="search($event)"></search-form>
                 </td>
             </tr>
             <tr>
