--- a/angular-app/src/app/components/pages/product/product-list/product-list.component.html
+++ b/angular-app/src/app/components/pages/product/product-list/product-list.component.html
@@ -18,7 +18,7 @@
                   </label>
               </td>
               <td colspan="2">
-                  <product-search-form (onSearch)="search($event)"></product-search-form>
+                  <search-form (onSearch)="search($event)"></search-form>
               </td>
           </tr>
           <tr>
