--- a/angular-app/src/app/components/pages/user/user-list/user-list.component.html
+++ b/angular-app/src/app/components/pages/user/user-list/user-list.component.html
@@ -18,7 +18,7 @@
                 </label>
             </td>
             <td colspan="2">
-                <user-search-form (onSearch)="search($event)"></user-search-form>
+                <search-form (onSearch)="search($event)"></search-form>
             </td>
         </tr>
         <tr>
