--- a/angular-app/src/app/components/pages/category/category-new-modal/category-new-modal.component.html
+++ b/angular-app/src/app/components/pages/category/category-new-modal/category-new-modal.component.html
@@ -8,25 +8,7 @@
             Nova categoria
         </h5>
         <div modal-body>
-            <div class="form-group">
-                <label for="name">Nome</label>
-                <input type="text" 
-                       name="category.name" 
-                       id="name" 
-                       class="form-control" 
-                       required 
-                       placeholder="Informe um nome para a nova categoria"
-                       [(ngModel)]="category.name">
-            </div>
-            <div class="form-group form-check">
-                <input type="checkbox" 
-                       name="active" 
-                       id="active"
-                       class="form-check-input"
-                       required 
-                       [(ngModel)]="category.active">
-                <label for="active">Ativo?</label>
-            </div>
+            <category-form [category]="category"></category-form>
         </div>
         <div modal-footer>
             <button type="button" class="btn btn-secondary" data-dismiss="modal">
