--- a/angular-app/src/app/components/pages/user/user-edit-modal/user-edit-modal.component.html
+++ b/angular-app/src/app/components/pages/user/user-edit-modal/user-edit-modal.component.html
@@ -4,36 +4,14 @@
             Editar usuário
         </h5>
         <div modal-body>
-            <div class="form-group">
-                <label for="name">Nome</label>
-                <input type="text" 
-                       name="user.name" 
-                       class="form-control" 
-                       required 
-                       placeholder="Informe um nome para o usuário"
-                       [(ngModel)]="user.name">
-            </div>
-            <div class="form-group">
-                <label for="password">Senha</label>
-                <input type="password" 
-                        name="user.password" 
-                        class="form-control" 
-                        [(ngModel)]="user.password">
-            </div>
-            <div class="form-group">
-                <label for="confirmPassword">Confirmar senha</label>
-                <input type="password" 
-                        name="confirmPassword" 
-                        class="form-control"
-                        [(ngModel)]="confirmPassword">
-            </div>
+            <user-form [user]="user" [editMode]=true></user-form>
         </div>
         <div modal-footer>
             <button type="button" class="btn btn-secondary" data-dismiss="modal">
                 Fechar
             </button>
             &nbsp;
-            <button type="submit" class="btn btn-primary" *ngIf="user.password == confirmPassword">
+            <button type="submit" class="btn btn-primary">
                 Salvar
             </button>
         </div>
