--- a/angular-app/src/app/components/pages/category/category-new-modal/category-new-modal.component.html
+++ b/angular-app/src/app/components/pages/category/category-new-modal/category-new-modal.component.html
@@ -8,14 +8,14 @@
             Nova categoria
         </h5>
         <div modal-body>
-            <category-form [category]="category"></category-form>
+            <category-form [form]="form"></category-form>
         </div>
         <div modal-footer>
             <button type="button" class="btn btn-secondary" data-dismiss="modal">
                 Fechar
             </button>
             &nbsp;
-            <button type="submit" class="btn btn-primary">
+            <button type="submit" class="btn btn-primary" [disabled]="!form.valid">
                 Incluir
             </button>
         </div>
