--- a/angular-app/src/app/components/pages/category/category-form/category-form.component.html
+++ b/angular-app/src/app/components/pages/category/category-form/category-form.component.html
@@ -4,8 +4,19 @@
          name="name"
          formControlName="name" 
          class="form-control" 
+         maxlength="20"
          required 
-         placeholder="Informe um nome para a categoria">
+         placeholder="Informe um nome para a categoria"
+         [ngClass]="{'is-invalid': form.get('name').invalid && (form.get('name').dirty || form.get('name').touched)}"
+         >
+  <div class="invalid-feedback" *ngIf="form.get('name').invalid && (form.get('name').dirty || form.get('name').touched)">
+    <p *ngIf="form.get('name').errors.required">
+      O campo nome é de preenchimento obrigatório.
+    </p>
+    <p *ngIf="form.get('name').errors.maxlength">
+      O tamanho máximo do campo é de 20 caracteres.
+    </p>
+  </div>
 </div>
 <div class="form-group form-check" [formGroup]="form">
   <input type="checkbox" 
