Criando diretiva para adicionar classe de erro

--- a/angular-app/src/app/components/pages/category/category-form/category-form.component.html
+++ b/angular-app/src/app/components/pages/category/category-form/category-form.component.html
@@ -7,8 +7,7 @@
          maxlength="20"
          required 
          placeholder="Informe um nome para a categoria"
-         [ngClass]="{'is-invalid': form.get('name').invalid && (form.get('name').dirty || form.get('name').touched)}"
-         >
+         isInvalid>
   <field-error [field]="form.get('name')"></field-error>
 </div>
 <div class="form-group form-check" [formGroup]="form">
