Partial: cadastro/edição de produtos usar React Forms

--- a/angular-app/src/app/components/pages/product/product-edit-modal/product-edit-modal.component.html
+++ b/angular-app/src/app/components/pages/product/product-edit-modal/product-edit-modal.component.html
@@ -8,7 +8,7 @@
             Editar produto
         </h5>
         <div modal-body>
-            <product-form [product]="product"></product-form>
+            <product-form></product-form>
         </div>
         <div modal-footer>
             <button type="button" class="btn btn-secondary" data-dismiss="modal">
