--- a/angular-app/src/app/components/pages/product/product-new-modal/product-new-modal.component.html
+++ b/angular-app/src/app/components/pages/product/product-new-modal/product-new-modal.component.html
@@ -8,14 +8,15 @@
             Novo produto
         </h5>
         <div modal-body>
-            <product-form></product-form>
+            <list-error [errors]="errors" *ngIf="showErrors()"></list-error>
+            <product-form [form]="form"></product-form>
         </div>
         <div modal-footer>
             <button type="button" class="btn btn-secondary" data-dismiss="modal">
                 Fechar
             </button>
             &nbsp;
-            <button type="submit" class="btn btn-primary">
+            <button type="submit" class="btn btn-primary" [disabled]="!form.valid">
                 Incluir
             </button>
         </div>
