--- a/angular-app/src/app/components/bootstrap/navbar/navbar.component.html
+++ b/angular-app/src/app/components/bootstrap/navbar/navbar.component.html
@@ -24,6 +24,11 @@
           </a>
         </li>
         <li class="nav-item" [routerLinkActive]="'active'">
+          <a class="nav-link" [routerLink]="'/inputs/list'">
+            Entradas
+          </a>
+        </li>
+        <li class="nav-item" [routerLinkActive]="'active'">
           <a class="nav-link" [routerLink]="'/users/list'">
             Usuários
           </a>
