Restringindo busca de produtos

--- a/angular-app/src/app/components/pages/input/input-new-modal/input-new-modal.component.html
+++ b/angular-app/src/app/components/pages/input/input-new-modal/input-new-modal.component.html
@@ -5,7 +5,7 @@
       (onHideModal)="onHideModal($event)" 
       (onHiddenModal)="onHiddenModal($event)">
       <h5 modal-title>
-          Nova entrada no estoque
+          Nova entrada de estoque
       </h5>
       <div modal-body>
           <!--
