React Forms na listagem de usuários

--- a/angular-app/src/app/components/pages/user/user-edit-modal/user-edit-modal.component.html
+++ b/angular-app/src/app/components/pages/user/user-edit-modal/user-edit-modal.component.html
@@ -4,14 +4,15 @@
             Editar usuário
         </h5>
         <div modal-body>
-            <user-form [user]="user" [editMode]=true></user-form>
+            <list-error [errors]="errors" *ngIf="showErrors()"></list-error>
+            <user-form [form]="form" [editMode]=true></user-form>
         </div>
         <div modal-footer>
             <button type="button" class="btn btn-secondary" data-dismiss="modal">
                 Fechar
             </button>
             &nbsp;
-            <button type="submit" class="btn btn-primary">
+            <button type="submit" class="btn btn-primary" [disabled]="!form.valid">
                 Salvar
             </button>
         </div>
