--- a/angular-app/src/app/components/pages/user/user-profile/user-profile.component.html
+++ b/angular-app/src/app/components/pages/user/user-profile/user-profile.component.html
@@ -1,7 +1,7 @@
 <h3>Minha Conta</h3>
 <hr>
 <form (submit)="submit()" autocomplete="off">   
-  <user-form [user]="user" [editMode]=true></user-form>
+  <!--user-form [user]="user" [editMode]=true></user-form-->
   <button type="submit" class="btn btn-primary">
     Salvar
   </button>
