--- a/angular-app/src/app/components/pages/user/user-new-modal/user-new-modal.component.html
+++ b/angular-app/src/app/components/pages/user/user-new-modal/user-new-modal.component.html
@@ -4,15 +4,15 @@
             Novo usuário
         </h5>
         <div modal-body>
-            {{confirmPassword}}
-            <user-form [user]="user"></user-form>
+            <list-error [errors]="errors" *ngIf="showErrors()"></list-error>
+            <user-form [form]="form"></user-form>
         </div>
         <div modal-footer>
             <button type="button" class="btn btn-secondary" data-dismiss="modal">
                 Fechar
             </button>
             &nbsp;
-            <button type="submit" class="btn btn-primary">
+            <button type="submit" class="btn btn-primary" [disabled]="!form.valid">
                 Cadastrar
             </button>
         </div>
