--- a/angular-app/src/app/components/pages/input/input-new-modal/input-new-modal.component.html
+++ b/angular-app/src/app/components/pages/input/input-new-modal/input-new-modal.component.html
@@ -8,17 +8,15 @@
           Nova entrada de estoque
       </h5>
       <div modal-body>
-          <!--
           <list-error [errors]="errors" *ngIf="showErrors()"></list-error>
-          <product-form [form]="form"></product-form>
-          -->
+          <input-form [form]="form"></input-form>
       </div>
       <div modal-footer>
           <button type="button" class="btn btn-secondary" data-dismiss="modal">
               Fechar
           </button>
           &nbsp;
-          <button type="submit" class="btn btn-primary">
+          <button type="submit" class="btn btn-primary" [disabled]="!form.valid">
               Incluir
           </button>
       </div>
