--- a/angular-app/src/app/components/pages/input/input-form/input-form.component.html
+++ b/angular-app/src/app/components/pages/input/input-form/input-form.component.html
@@ -3,12 +3,7 @@
       {{fieldsOptions.product.label}}
   </label>
   <br>
-  <select2 
-      formControlName="product" 
-      [data]="productIdFieldService.data"
-      [options]="productIdFieldService.options"
-  >
-  </select2>
+  <select2 formControlName="product" [data]="productIdFieldService.data" [options]="productIdFieldService.options"></select2>
 </div>
 <div class="form-group" [formGroup]="form">
   <label [for]="fieldsOptions.amount.id">
