Validação da quantidade de produto

--- a/angular-app/src/app/components/pages/input/input-form/input-form.component.html
+++ b/angular-app/src/app/components/pages/input/input-form/input-form.component.html
@@ -12,7 +12,13 @@
   <input type="number" 
          formControlName="amount"
          class="form-control input-small" 
+         isInvalid
          [id]="fieldsOptions.amount.id"
-         [min]="fieldsOptions.amount.min" 
          [step]="fieldsOptions.amount.step">
+  <field-error 
+         [field]="form.get('amount')"
+         [label]="fieldsOptions.amount.label"
+         [messages]="fieldsOptions.amount.validationMessage"
+         >
+  </field-error>
 </div>
