--- a/angular-app/src/app/components/pages/category/category-form/category-form.component.html
+++ b/angular-app/src/app/components/pages/category/category-form/category-form.component.html
@@ -6,8 +6,15 @@
          formControlName="name" 
          class="form-control" 
          [id]="fieldsOptions.name.id"
+         [maxlength]="fieldsOptions.name.validationMessage.maxlength"
          [placeholder]="fieldsOptions.name.placeholder"
          isInvalid>
+  <field-error 
+         [field]="form.get('name')"
+         [label]="fieldsOptions.name.label"
+         [messages]="fieldsOptions.name.validationMessage"
+         >
+  </field-error>
 </div>
 <div class="form-group form-check" [formGroup]="form">
   <input type="checkbox" 
