--- a/angular-app/src/app/components/pages/category/category-form/category-form.component.html
+++ b/angular-app/src/app/components/pages/category/category-form/category-form.component.html
@@ -8,6 +8,7 @@
          [id]="fieldsOptions.name.id"
          [maxlength]="fieldsOptions.name.validationMessage.maxlength"
          [placeholder]="fieldsOptions.name.placeholder"
+         required
          isInvalid>
   <field-error 
          [field]="form.get('name')"
