Maxlength no campo name de usuários

--- a/angular-app/src/app/components/pages/user/user-form/user-form.component.html
+++ b/angular-app/src/app/components/pages/user/user-form/user-form.component.html
@@ -6,6 +6,7 @@
          formControlName="name" 
          class="form-control" 
          [id]="fieldsOptions.name.id"
+         [maxlength]="fieldsOptions.name.validationMessage.maxlength"
          [placeholder]="fieldsOptions.name.placeholder"
          isInvalid>
   <field-error 
