--- a/angular-app/src/app/components/pages/input/input-form/input-form.component.html
+++ b/angular-app/src/app/components/pages/input/input-form/input-form.component.html
@@ -1,24 +1,28 @@
 <div class="form-group" [formGroup]="form">
-  <label [for]="fieldsOptions.product.id">
-      {{fieldsOptions.product.label}}
-  </label>
-  <br>
-  <select2 formControlName="product" [data]="productIdFieldService.data" [options]="productIdFieldService.options"></select2>
-</div>
-<div class="form-group" [formGroup]="form">
   <label [for]="fieldsOptions.amount.id">
     {{fieldsOptions.amount.label}}
   </label>
   <input type="number" 
-         formControlName="amount"
-         class="form-control input-small" 
-         isInvalid
-         [id]="fieldsOptions.amount.id"
-         [step]="fieldsOptions.amount.step">
+      formControlName="amount"
+      class="form-control input-small" 
+      isInvalid
+      [id]="fieldsOptions.amount.id"
+      [step]="fieldsOptions.amount.step">
   <field-error 
-         [field]="form.get('amount')"
-         [label]="fieldsOptions.amount.label"
-         [messages]="fieldsOptions.amount.validationMessage"
-         >
+      [field]="form.get('amount')"
+      [label]="fieldsOptions.amount.label"
+      [messages]="fieldsOptions.amount.validationMessage">
+  </field-error>
+</div>
+<div class="form-group">
+  <select2 
+      [data]="productIdFieldService.data" 
+      [options]="productIdFieldService.options"
+      [isInvalidControl]="form.get('product_id')">
+  </select2>
+  <field-error 
+      [field]="form.get('product_id')"
+      [label]="fieldsOptions.product_id.label"
+      [messages]="fieldsOptions.product_id.validationMessage">
   </field-error>
 </div>
