--- a/angular-app/src/app/components/pages/input/input-form/input-form.component.html
+++ b/angular-app/src/app/components/pages/input/input-form/input-form.component.html
@@ -1,3 +1,20 @@
+<div class="form-group">
+  <label [for]="fieldsOptions.product_id.id">
+      {{fieldsOptions.product_id.label}}
+  </label>
+  <br>
+  <select2 
+      [id]="fieldsOptions.product_id.id"
+      [data]="productIdFieldService.data" 
+      [options]="productIdFieldService.options"
+      [isInvalidControl]="form.get('product_id')">
+  </select2>
+  <field-error 
+      [field]="form.get('product_id')"
+      [label]="fieldsOptions.product_id.label"
+      [messages]="fieldsOptions.product_id.validationMessage">
+  </field-error>
+</div>
 <div class="form-group" [formGroup]="form">
   <label [for]="fieldsOptions.amount.id">
     {{fieldsOptions.amount.label}}
@@ -12,17 +29,5 @@
       [field]="form.get('amount')"
       [label]="fieldsOptions.amount.label"
       [messages]="fieldsOptions.amount.validationMessage">
-  </field-error>
-</div>
-<div class="form-group">
-  <select2 
-      [data]="productIdFieldService.data" 
-      [options]="productIdFieldService.options"
-      [isInvalidControl]="form.get('product_id')">
-  </select2>
-  <field-error 
-      [field]="form.get('product_id')"
-      [label]="fieldsOptions.product_id.label"
-      [messages]="fieldsOptions.product_id.validationMessage">
   </field-error>
 </div>
