Tela de entrada de produtos, somente lista as entradas, o cadastro será feito em outra páginas, pois não gostei do componente select2, muito trabalhoso para implementar

--- a/angular-app/src/app/components/bootstrap/navbar/navbar.component.html
+++ b/angular-app/src/app/components/bootstrap/navbar/navbar.component.html
@@ -29,6 +29,11 @@
           </a>
         </li>
         <li class="nav-item" [routerLinkActive]="'active'">
+          <a class="nav-link" [routerLink]="'/outputs/list'">
+            Saídas
+          </a>
+        </li>
+        <li class="nav-item" [routerLinkActive]="'active'">
           <a class="nav-link" [routerLink]="'/users/list'">
             Usuários
           </a>
